--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,30 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-parcelize'
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+
+    buildFeatures {
+        compose true
+    }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion '1.5.10'
+        kotlinCompilerVersion kotlin_version
+    }
+
+    compileSdk rootProject.ext.compileSdkVersion
+    namespace 'com.aidlab.example'
+
+    compileOptions {
+        sourceCompatibility rootProject.ext.javaVersion
+        targetCompatibility rootProject.ext.javaVersion
+    }
+
     defaultConfig {
         applicationId "com.aidlab.example"
-        minSdkVersion 25
-        targetSdkVersion 30
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -18,30 +34,29 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-}
-
-allprojects {
-    repositories {
-        jcenter()
-        flatDir {
-            dirs 'libs'
+        debug {
+            debuggable true
+            jniDebuggable true
         }
     }
+    buildToolsVersion '34.0.0'
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation(name:'aidlabnativesdk', ext:'aar')
-    implementation(name:'aidlabsdk', ext:'aar')
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.aidlab:sdk:1.6.0'
+    testImplementation 'junit:junit:4.13.2'
 
-    // Dependencies used by AidlabSDK
-    implementation "com.polidea.rxandroidble2:rxandroidble:1.11.1"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
-}
-repositories {
-    mavenCentral()
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+
+    implementation 'androidx.compose.ui:ui:1.6.3'
+    implementation 'androidx.compose.material:material:1.6.3'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.3'
+    implementation "androidx.activity:activity-compose:1.8.2"
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.6.3'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.3'
 }
