--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,24 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+ext {
+    compileSdkVersion = 34
+    minSdkVersion = 28
+    targetSdkVersion = 34
+    javaVersion = JavaVersion.VERSION_17
+    kotlin_version = '1.9.22'
+}
+
 buildscript {
-    ext.kotlin_version = '1.4.21'
+    ext.kotlin_version = '1.9.22'
     repositories {
-        jcenter()
+        mavenCentral()
+        google()
         maven {
-            url 'https://maven.google.com/'
-            name 'Google'
+            url = uri("https://plugins.gradle.org/m2/")
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:8.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,10 +28,10 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
+        google()
         maven {
-            url 'https://maven.google.com/'
-            name 'Google'
+            url = uri("https://plugins.gradle.org/m2/")
         }
     }
 }
