--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
+apply plugin: 'org.jlleitschuh.gradle.ktlint'
 
 android {
 
@@ -46,7 +47,7 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.aidlab:sdk:1.6.0'
+    implementation 'com.aidlab:sdk:1.7.0'
     testImplementation 'junit:junit:4.13.2'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
