--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,63 +1,74 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-parcelize'
+apply plugin: 'org.jetbrains.kotlin.plugin.compose'
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
 
 android {
 
     buildFeatures {
-        compose true
+        compose = true
     }
 
     composeOptions {
-        kotlinCompilerExtensionVersion '1.5.10'
-        kotlinCompilerVersion kotlin_version
+        kotlinCompilerExtensionVersion = '1.5.10'
     }
 
-    compileSdk rootProject.ext.compileSdkVersion
-    namespace 'com.aidlab.example'
+    compileSdk = rootProject.ext.compileSdkVersion
+    namespace = 'com.aidlab.example'
 
     compileOptions {
-        sourceCompatibility rootProject.ext.javaVersion
-        targetCompatibility rootProject.ext.javaVersion
+        sourceCompatibility = rootProject.ext.javaVersion
+        targetCompatibility = rootProject.ext.javaVersion
+    }
+    // Ensure Kotlin JVM target matches Java 17
+    kotlinOptions {
+        jvmTarget = '17'
     }
 
     defaultConfig {
-        applicationId "com.aidlab.example"
-        minSdkVersion rootProject.ext.minSdkVersion
-        targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        applicationId = "com.aidlab.example"
+        minSdkVersion = rootProject.ext.minSdkVersion
+        targetSdkVersion = rootProject.ext.targetSdkVersion
+        versionCode = 1
+        versionName = "1.0"
+        testInstrumentationRunner = 'androidx.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled = false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
         debug {
-            debuggable true
-            jniDebuggable true
+            debuggable = true
+            jniDebuggable = true
         }
     }
-    buildToolsVersion '34.0.0'
+    buildToolsVersion = '35.0.0'
+}
+
+// Align Kotlin toolchain with Java 17
+kotlin {
+    jvmToolchain(17)
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.aidlab:sdk:1.7.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.9.2"
+    implementation 'androidx.appcompat:appcompat:1.7.1'
+    implementation 'com.aidlab:sdk:1.7.4'
+    implementation project(':sdk')
+
     testImplementation 'junit:junit:4.13.2'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
 
-    implementation 'androidx.compose.ui:ui:1.6.3'
-    implementation 'androidx.compose.material:material:1.6.3'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.6.3'
-    implementation "androidx.activity:activity-compose:1.8.2"
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.6.3'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.3'
+    implementation 'androidx.compose.ui:ui:1.8.3'
+    implementation 'androidx.compose.material:material:1.8.3'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.8.3'
+    implementation "androidx.activity:activity-compose:1.10.1"
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.8.3'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.8.3'
 }
