--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 ext {
-    compileSdkVersion = 34
+    compileSdkVersion = 36
     minSdkVersion = 28
-    targetSdkVersion = 34
+    targetSdkVersion = 36
     javaVersion = JavaVersion.VERSION_17
-    kotlin_version = '1.9.22'
+    kotlin_version = '2.1.20'
 }
 
 buildscript {
-    ext.kotlin_version = '1.9.22'
+    ext.kotlin_version = '2.1.20'
     repositories {
         mavenCentral()
         google()
@@ -18,8 +18,9 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:8.3.0'
+        classpath 'com.android.tools.build:gradle:8.12.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:compose-compiler-gradle-plugin:$kotlin_version"
         classpath 'org.jlleitschuh.gradle:ktlint-gradle:12.1.0'
         
         // NOTE: Do not place your application dependencies here; they belong
