--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,8 @@ android {
 
     defaultConfig {
         applicationId = "com.aidlab.example"
-        minSdkVersion = rootProject.ext.minSdkVersion
-        targetSdkVersion = rootProject.ext.targetSdkVersion
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode = 1
         versionName = "1.0"
         testInstrumentationRunner = 'androidx.test.runner.AndroidJUnitRunner'
@@ -54,10 +54,9 @@ kotlin {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.9.2"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.9.4"
     implementation 'androidx.appcompat:appcompat:1.7.1'
-    implementation 'com.aidlab:sdk:1.7.4'
-    implementation project(':sdk')
+    implementation 'com.aidlab:sdk:2.0.0'
 
     testImplementation 'junit:junit:4.13.2'
 
@@ -65,10 +64,10 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.10.2'
 
-    implementation 'androidx.compose.ui:ui:1.8.3'
-    implementation 'androidx.compose.material:material:1.8.3'
-    implementation 'androidx.compose.ui:ui-tooling-preview:1.8.3'
-    implementation "androidx.activity:activity-compose:1.10.1"
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.8.3'
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.8.3'
+    implementation 'androidx.compose.ui:ui:1.9.4'
+    implementation 'androidx.compose.material:material:1.9.4'
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.9.4'
+    implementation "androidx.activity:activity-compose:1.11.0"
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.9.4'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.9.4'
 }
